# CoalicionGM_AlgoritmoGenetico

./: .gitignore  README.md
AlgoritmoC++/: .gitignore  AlgoritmoC++.cpp  AlgoritmoC++.sln  AlgoritmoC++.vcxproj  AlgoritmoC++.vcxproj.filters
Datos Votacion RH0941234/: graficoconvexUSA.r  graficosIteraciones.R  valores_verif_votacionRH0941234.csv
Datos Votacion RH0941234/Ejecuciones/: Ejecucion Cluster - Resultados.7z  leer_verif1.bash  leer_verif10.bash  leer_verif2.bash  leer_verif3.bash  leer_verif4.bash  leer_verif5.bash  leer_verif6.bash  leer_verif7.bash  leer_verif8.bash  leer_verif9.bash
RegresionGaussiana/: .RData  .Rhistory  GaussianRegression.R
Server Censei/: .Rhistory  Resultados.7z  graficosHistograma.R  graficosIteraciones.R  hist.json  leer_verif.bash  valores_verif.csv  valores_verif_ParamPython.csv  valores_verif_RH0750158-ant.csv  valores_verif_RH0750158-arreglado.csv  valores_verif_RH0750158-final-10000-corregido.csv  valores_verif_RH0750158-final-10000.csv  valores_verif_RH0750158-final-3000.csv  valores_verif_RH0750158.csv  valores_verif_RH0750158ParamsR.csv  valores_verif_RH1170588.csv  valores_verif_RH1170867.csv  valores_verif_VersionAntigua.csv
VotesGenerator/: CMakeLists.txt  VotesGenerator.cpp  VotesGenerator.h
algoritmo C++/: prueba.cpp
algoritmo R/: Matriz50.csv  algoritmo_genetico_v2.R
algoritmo R/version py/: Comentado.py  ejemplo2.json
algoritmoc++/: .gitignore  CMakeLists.txt  CMakePresets.json  ext.bash  hist.json  leer_verif.bash  resultados.json  script.bash  scriptServer.bash  verificacion.bash
algoritmoc++/data/: ingles.json  inglesRH1170588.json  inglesRH1170867.json  matrizDistancia.txt  votes.json
algoritmoc++/src/: functions.h  main  main.cpp
algoritmoc++_GenPobDist/: CMakeLists.txt
algoritmoc++_GenPobDist/data/: ejemplo2.json  poblacionInit.txt
algoritmoc++_GenPobDist/src/: main.cpp
brute_force_algorithm/: CMakeLists.txt
brute_force_algorithm/data/: votes.json
brute_force_algorithm/src/: brute_force_algorithm.cpp  brute_force_algorithm.h
generarPobInit/: CMakeLists.txt
generarPobInit/src/: main.cpp
graficos/: .RData  .Rhistory  .gitignore  graficoConvexUSA_old.R  graficoFitness.R  graficoconvexChileno.r  graficoconvexUSA.r  ingles.json  prueba.csv  pruebaCompleta.csv  pruebaPTreshAlto.csv  pruebaTresh04.csv  resultados.json  resultados.json.old  resultados1.json  resultados2.json  resultadosBuenos.json  valores_verif.csv
graficos/4Coaliciones/: resultados_1_fit_9519.json  resultados_3_fit_9519.79.json
graficos/PoblacionInicial/: PoblacionInicial.R  RH0750158.csv  poblacionInit.csv
libreria/Dll1/: .editorconfig  .gitignore  Dll1.sln  Dll1.vcxproj  Dll1.vcxproj.filters  dllmain.cpp  pch.cpp  pch.h
limbo/CoalicionGM/: main.cpp  params_CoalicionGM.txt
limbo/exp1/: wscript
limbo/exp2/: params_exp2.txt
limbo/exp3/: main.cpp  params_exp1.txt  params_exp3.txt
limbo/exp4/: main.cpp  params_exp4.txt
limbo/exp5/: main.cpp
limbo/exp6/: main.cpp
limbo/exp7/: main.cpp
limbo/exp8/: main.cpp
limbo/gaussian_CoalicionGM/: gaussian_CoalicionGM.cpp  params_gaussian_CoalicionGM.txt  wscript
optiPython/: test1.py  test2.py
pruebas limbo/exp1/: 2022-08-20 T-21-45-info_data.txt  2022-08-20 T-21-45-info_group_data.txt  pruebas.R
pruebas limbo/exp2/: 2022-08-20 T-21-45-info_data.txt  2022-08-20 T-21-45-info_group_data.txt
pruebas limbo/exp3/: 2022-08-20 T-21-41-info_data.txt  2022-08-20 T-21-41-info_group_data.txt  pruebasExp3.R  (+2 more)
(+10651 files in other folders)
